fix layout bugs

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: Roboto, sans-serif;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   display: grid;
   grid-template-columns: auto 1fr;
@@ -86,6 +86,7 @@ main > div > p {
   background-color: #38bdf8;
   border-radius: 1rem;
   width: calc((100% - 2rem) / 2);
+  min-width: 300px;
 }
 
 .project > div {
